--- a/Assignment2/Base.lproj/Main.storyboard
+++ b/Assignment2/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
             </objects>
             <point key="canvasLocation" x="1176.8" y="8.5457271364317844"/>
         </scene>
-        <!--Brand-->
+        <!--BRAND-->
         <scene sceneID="FEc-C1-NYv">
             <objects>
                 <tableViewController id="Cwo-cc-uGC" sceneMemberID="viewController">
@@ -107,7 +107,7 @@
                             <outlet property="delegate" destination="Cwo-cc-uGC" id="wS0-S9-w8L"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Brand" id="fnj-jx-wkT"/>
+                    <navigationItem key="navigationItem" title="BRAND" id="fnj-jx-wkT"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WHG-6M-CjW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -151,7 +151,7 @@
             </objects>
             <point key="canvasLocation" x="1997.5999999999999" y="8.5457271364317844"/>
         </scene>
-        <!--Root View Controller-->
+        <!--NEWS-->
         <scene sceneID="msB-V4-aXo">
             <objects>
                 <tableViewController id="2G9-4O-Yjq" sceneMemberID="viewController">
@@ -174,7 +174,7 @@
                             <outlet property="delegate" destination="2G9-4O-Yjq" id="rWM-LL-7bv"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="qsC-LI-1hG"/>
+                    <navigationItem key="navigationItem" title="NEWS" id="qsC-LI-1hG"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QDn-PF-GEy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -197,7 +197,7 @@
             </objects>
             <point key="canvasLocation" x="2098" y="761"/>
         </scene>
-        <!--Root View Controller-->
+        <!--SHOPPING-->
         <scene sceneID="O1Z-R0-5UA">
             <objects>
                 <tableViewController id="jJZ-yO-GLJ" sceneMemberID="viewController">
@@ -220,7 +220,7 @@
                             <outlet property="delegate" destination="jJZ-yO-GLJ" id="zgm-Sc-zTw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="V4x-GY-t5c"/>
+                    <navigationItem key="navigationItem" title="SHOPPING" id="V4x-GY-t5c"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WBE-HM-VFU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -284,10 +284,38 @@
             </objects>
             <point key="canvasLocation" x="-468" y="9.4452773613193415"/>
         </scene>
-        <!--Favorites-->
+        <!--MAP-->
+        <scene sceneID="h4a-Jw-SKc">
+            <objects>
+                <viewController id="21L-2T-pno" customClass="MapViewController" customModule="Assignment2" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dtA-h1-fXM"/>
+                        <viewControllerLayoutGuide type="bottom" id="0B1-SJ-18S"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Xbr-Nk-2GK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="114-wq-xkr">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="MAP" id="v5A-YF-lLO"/>
+                    <connections>
+                        <outlet property="storesMap" destination="114-wq-xkr" id="dt6-rM-AJy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ecl-SK-5BU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1383.2" y="1483.8080959520241"/>
+        </scene>
+        <!--FAVORITES-->
         <scene sceneID="J9T-1Z-D8F">
             <objects>
-                <tableViewController id="99G-B0-eGn" sceneMemberID="viewController">
+                <tableViewController id="99G-B0-eGn" customClass="FavoriteTableViewController" customModule="Assignment2" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Mld-bd-2lw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -307,40 +335,11 @@
                             <outlet property="delegate" destination="99G-B0-eGn" id="Dkf-15-hZG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Favorites" id="WU1-y6-V97"/>
+                    <navigationItem key="navigationItem" title="FAVORITES" id="WU1-y6-V97"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VHO-Bd-jOQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-468" y="1484"/>
-        </scene>
-        <!--Root View Controller-->
-        <scene sceneID="6dw-xX-hNp">
-            <objects>
-                <tableViewController id="Lub-zR-ekW" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="WCr-3Y-L9l">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="x93-yK-4Za">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x93-yK-4Za" id="g7M-bI-dR6">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="Lub-zR-ekW" id="qtF-6n-RcF"/>
-                            <outlet property="delegate" destination="Lub-zR-ekW" id="yg4-sT-L5L"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="dYg-jN-8i8"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x0O-Nw-Sr1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1382" y="1484"/>
         </scene>
         <!--Store locator-->
         <scene sceneID="QCD-fu-blY">
@@ -352,7 +351,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="Lub-zR-ekW" kind="relationship" relationship="rootViewController" id="Qbs-Ke-vGb"/>
+                        <segue destination="21L-2T-pno" kind="relationship" relationship="rootViewController" id="9mp-1a-qXU"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mKe-cM-is5" userLabel="First Responder" sceneMemberID="firstResponder"/>
